--- a/Foursouls Cards Initializer/Foursouls Cards Initializer/Foursouls Cards Initializer.csproj
+++ b/Foursouls Cards Initializer/Foursouls Cards Initializer/Foursouls Cards Initializer.csproj
@@ -16,4 +16,27 @@
     <PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.8.4" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Resources\dragAndDrop.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Resources\drag and drop.png" />
+  </ItemGroup>
 </Project>
